[tool.poetry]
name = "opaylite"
version = "0.1.0"
description = "Opay API wrapper"
authors = ["Peter Mbachu <doublep098@gmail.com>"]
maintainers = [
    "petermbachu.bincom <petermbachu.bincom@gmail.com>",
]
license = "MIT"
readme = "README.md"
keywords = ["opaylite", "api", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [{include = "opaylite"}]


[license]
text = "Copyright ©2024 Peter Mbachu"


[tool.poetry.urls]
"Homepage" = "https://github.com/cla-bit/PayStackEase"
"Repository" = "https://github.com/cla-bit/PayStackEase"
"Source Code" = "https://github.com/cla-bit/PayStackEase"
"Documentation" = "https://paystackease.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/cla-bit/PayStackEase/issues"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"
aiohttp = "^3.9"
PyJWT = "^2.8"
python-decouple = "^3.8"
twine = "^5.0"


[tool.poetry.group.docs.dependencies]
pdflatex = "^0.1.3"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinxawesome-theme = "^5.1.1"
sphinx-autobuild = "^2024.2.4"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0"
responses = "^0.25"
pytest-asyncio = "^0.23"
aioresponses = "^0.7"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"


[tool.black]
target-version = ['py310', 'py311']
include = '\.pyi?$'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
